# LumiAdmin

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 20260622000000_baseline.sql  20260703000000_player_server_sessions.sql  20260706000000_player_server_sessions_end_detail.sql  20260706001000_player_access_cache_rating_source.sql
backend/src/: a2s.rs  config.rs  db.rs  error.rs  errors.rs  http_client.rs  main.rs  middleware.rs  models.rs  password.rs  rate_limit_middleware.rs  rcon.rs  request_log_middleware.rs  response.rs  routes.rs  sql_fragments.rs  test_util.rs
backend/src/auth/: mod.rs  permissions.rs  session.rs
backend/src/db/: abnormal_records.rs  ban_appeals.rs  ban_records.rs  core.rs  external.rs  indexes.rs  logs.rs  map_feedback.rs  map_sync.rs  mod.rs  notifications.rs  player_api.rs  player_reports.rs  servers.rs  tests.rs  user_schema.rs  utils.rs  whitelist.rs
backend/src/routes/: abnormal_record.rs  access.rs  auth.rs  ban.rs  ban_api.rs  ban_appeal.rs  community.rs  external_ban_api.rs  external_server.rs  global_ban.rs  map_feedback.rs  map_sync.rs  misc.rs  mod.rs  notification.rs  ops.rs  player_detail.rs  player_report.rs  plugin.rs  public.rs  tests.rs  user.rs  whitelist.rs
backend/src/services/: abnormal_record_service.rs  access_cache.rs  access_log_service.rs  access_service.rs  access_snapshot_service.rs  audit_service.rs  auth_service.rs  ban_api_service.rs  ban_appeal_service.rs  ban_expiry_service.rs  ban_service.rs  community_rcon.rs  community_service.rs  dashboard_service.rs  display_name.rs  docs_service.rs  external_api_service.rs  external_ban_api_service.rs  external_server_service.rs  global_ban_service.rs  gokz_cache.rs  log_service.rs  map_feedback_service.rs  map_sync_service.rs  map_tier_service.rs  mod.rs  notification_service.rs  observability_service.rs  offline_sync_service.rs  permission_service.rs  (+16 more)
(+192 files in other folders)
