[package]
name = "manger-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "limit", "compression-gzip", "timeout"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "macros", "uuid", "chrono"] }
dotenvy = "0.15"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
tower = "0.5"
tracing = "0.1"
sha2 = "0.10"
futures = "0.3"
argon2 = "0.5"
once_cell = "1.19"
